# SPiMC

./: .gitmodules  README.md  flake.nix
implementations/: CMakeLists.txt  main.cpp
implementations/lib/: comm.hpp
implementations/lib/segment_queue/: segment_queue.cpp
implementations/segment_queue/: README.md  segment_queue.hpp
tests/: test.sh
